--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,47 +1,78 @@
 @font-face {
   font-family:"Century-Expanded-Regular";
-  src: local("fonts/century-expanded-regular.otf"), 
+  src: local("fonts/century-expanded-regular.otf"),
   url("../fonts/century-expanded-regular.otf");
 }
-
 @font-face {
   font-family:"Century-Expanded-Italic";
   src: local("fonts/century-expanded-italic.otf"),
   url("../fonts/century-expanded-italic.otf");
 }
-
 @font-face {
   font-family: "Century-Expanded-Bold";
   src: local("fonts/century-expanded-bold.otf"),
   url("../fonts/century-expanded-bold.otf");
 }
-
-@Font-face {
+@font-face {
   font-family: "Fira-Code-Regular";
   src: local("fonts/FiraCode-Regular.ttf"),
   url("../fonts/FiraCode-Regular.ttf");
 }
-
 @font-face {
   font-family: "Fira-Code-Bold";
   src: local("fonts/FiraCode-Bold.ttf"),
   url("../fonts/FiraCode-Bold.ttf");
 }
-
 @font-face {
   font-family: "Fira-Code-Light";
   src: local("fonts/FiraCode-Light.ttf"),
   url("../fonts/FiraCode-Light");
 }
-
 @font-face {
   font-family: "Fira-Code-Medium";
   src: local("fonts/FiraCode-Medium.ttf"),
   url("../fonts/FiraCode-Medium.ttf");
 }
 
-/* SIDENOTE / MARGIN NOTE */
+@counter-style decimal-paren {
+  system: numeric;
+  symbols: '\30' '\31' '\32' '\33' '\34' '\35' '\36' '\37' '\38' '\39';
+  prefix: "(";
+  suffix: ") ";
+  /* symbols: '0' '1' '2' '3' '4' '5' '6' '7' '8' '9'; */
+}
+@counter-style lower-alpha-paren {
+  system: alphabetic;
+  symbols: '\61' '\62' '\63' '\64' '\65' '\66' '\67' '\68' '\69' '\6A' '\6B' '\6C' '\6D' '\6E' '\6F' '\70' '\71' '\72' '\73' '\74' '\75' '\76' '\77' '\78' '\79' '\7A';
+  prefix: "(";
+  suffix: ") ";
+  /* symbols: 'a' 'b' 'c' 'd' 'e' 'f' 'g' 'h' 'i' 'j' 'k' 'l' 'm' 'n' 'o' 'p' 'q' 'r' 's' 't' 'u' 'v' 'w' 'x' 'y' 'z'; */
+}
+@counter-style lower-roman-paren {
+  system: additive;
+  range: 1 3999;
+  additive-symbols: 1000 '\6D', 900 '\63\6D', 500 '\64', 400 '\63\64', 100 '\63', 90 '\78\63', 50 '\6C', 40 '\78\6C', 10 '\78', 9 '\69\78', 5 '\76', 4 '\69\76', 1 '\69';
+  prefix: "(";
+  suffix: ") ";
+  /* additive-symbols: 1000 'm', 900 'cm', 500 'd', 400 'cd', 100 'c', 90 'xc', 50 'l', 40 'xl', 10 'x', 9 'ix', 5 'v', 4 'iv', 1 'i'; */
+}
+@counter-style upper-roman-paren {
+  system: additive;
+  range: 1 3999;
+  prefix: "(";
+  suffix: ") ";
+  additive-symbols: 1000 '\4D', 900 '\43\4D', 500 '\44', 400 '\43\44', 100 '\43', 90 '\58\43', 50 '\4C', 40 '\58\4C', 10 '\58', 9 '\49\58', 5 '\56', 4 '\49\56', 1 '\49';
+  /* additive-symbols: 1000 'M', 900 'CM', 500 'D', 400 'CD', 100 'C', 90 'XC', 50 'L', 40 'XL', 10 'X', 9 'IX', 5 'V', 4 'IV', 1 'I'; */
+}
+  
 
+address > span {
+  display: block;
+  font-family: Century-Expanded-Regular;
+  font-style: normal;
+}
+
+/* SIDENOTE / MARGIN NOTE */
 .annotated {
   width:68%;
 }
@@ -59,6 +90,11 @@ b, strong {
   font-family:Century-Expanded-Bold;
 }
 
+blockquote {
+  padding-left: 0.5in;
+  padding-right: 0.5in;
+}
+
 body {
   font-family:Century-Expanded-Regular;
   font-size:12pt;
@@ -68,8 +104,6 @@ code {
   background-color:#f2f1f1;
   font-family: Fira-Code-Medium;
   font-size:10pt;
-
-
 }
 
 del {
@@ -118,7 +152,6 @@ h5 {
   font-variant:normal;
   font-weight:bold;
 }
-
 h6 {
   display:block;
   font-family:Century-Expanded-Italic;
@@ -134,12 +167,47 @@ i {
 
 ins {
   background-color: #4dffb8;
-  
-  text-decoration:none;
+  text-decoration: underline;
+}
+
+section {
+  counter-reset: list-lvl-1;
+}
+ol.enum-block {
+  counter-reset: list-lvl-2;
+  padding-inline-start: 0in;
+}
+li {
+  list-style-type: none;
+  text-indent: 0.25in;
+}
+
+ol.enum-block > li::before {
+  content: "("counter(list-lvl-1, decimal-paren)") ";
+  counter-increment: list-lvl-1;
+}
+
+ol.enum-block > li > ol.enum-block {
+  padding-left: 0.25in;
+  counter-reset: list-lvl-3;
+}
+
+ol.enum-block > li > ol.enum-block > li::before {
+  content: "("counter(list-lvl-2, lower-alpha-paren)") ";
+  counter-increment: list-lvl-2;
+}
+
+ol.enum-block > li > ol.enum-block > li > ol.enum-block {
+  padding-left: 0.25in;
+}
+ol.enum-block > li > ol.enum-block > li > ol.enum-block > li::before {
+  content: "("counter(list-lvl-3, lower-roman-paren)") ";
+  counter-increment: list-lvl-3;
 }
 
 p {
   display:block;
+  font-size: 12pt;
 }
 
 sup {
@@ -147,7 +215,7 @@ sup {
 }
 
 table {
-  border-collapse:collapse;
+  border-collapse: collapse;
   table-layout:auto;
 }
 
